Update GPC ref and authors

--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
         },
         'GPC': {
           title: 'Global Privacy Control (GPC)',
-          authors: ['Robin Berjon', 'Sebastian Zimmeck', 'Ashkan Soltani', 'David Harbage', 'Peter Snyder'],
-          href: 'https://globalprivacycontrol.github.io/gpc-spec/',
+          authors: [ 'Sebastian Zimmeck', 'Peter Snyder', 'Justin Brookman', 'Aram Zucker-Scharff' ],
+          href: 'https://privacycg.github.io/gpc-spec/',
           publisher: 'W3C',
         },
         'IAD': {
