Use proper specref for EWP

--- a/index.html
+++ b/index.html
@@ -560,8 +560,8 @@ This document is considered stable by the TAG and is ready for wide review.
 
 ## How This Document Fits In
 
-This document elaborates on the [privacy principle](https://www.w3.org/2001/tag/doc/ethical-web-principles/#privacy)
-from the [[[Ethical-Web]]]: "Security and privacy are essential." While it focuses on privacy, this should
+This document elaborates on the [privacy principle](https://www.w3.org/TR/ethical-web-principles/#privacy)
+from the [[[ethical-web-principles]]]: "Security and privacy are essential." While it focuses on privacy, this should
 not be taken as an indication that privacy is always more important than other ethical web principles, and
 this document doesn't address how to balance the different ethical web principles if they come into conflict.
 
@@ -1064,10 +1064,10 @@ off between principles.
 Once one is choosing between different designs at the Pareto frontier, the choice of which
 privacy principles to prefer is complex and depends heavily on the details of each
 particular situation. Note that people's privacy can also be in tension
-with non-privacy concerns. As discussed in the [[[Ethical-Web]]], "it is important to
+with non-privacy concerns. As discussed in the [[[ethical-web-principles]]], "it is important to
 consider the context in which a particular technology is being applied, the expected
 audience(s) for the technology, who the technology benefits and who it may disadvantage,
-and any power dynamics involved" ([[Ethical-Web]]). Despite this complexity, there is a basic ground
+and any power dynamics involved" ([[ethical-web-principles]]). Despite this complexity, there is a basic ground
 rule to follow:
 
 <div class="practice" data-audiences="websites user-agents">
