--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@ shows that they make it hard for [=people=] to exercise their rights.
 
 ### Privacy Labor {#privacy-labor}
 
-<dfn data-lt="privacy labor|labor|labor">Privacy labor</dfn> is the practice of having a [=person=] do
+<dfn data-lt="labor">Privacy labor</dfn> is the practice of having a [=person=] do
 the work of ensuring [=data processing=] of which they are the subject or recipient is
 [=appropriate=], instead of putting the responsibility on the [=actors=] who are doing the processing.
 Data systems that are based on asking [=people=] for their [=consent=] tend to increase
