Say who should enforcement mechanism.

--- a/index.html
+++ b/index.html
@@ -1179,7 +1179,7 @@ constraints or other considerations. In time, we expect to see more specialized
 privacy principles published, for more specific [=contexts=] on the web.
 
 These principles should be enforced by [=user agents=]. When this is not possible,
-additional enforcement mechanisms are needed.
+we encourage other entities to find ways to enforce them.
 
 ## Identity on the Web {#identity}
 
