Discuss sites that users pay for with data.

--- a/index.html
+++ b/index.html
@@ -2101,6 +2101,10 @@ allowed to do so without the [=actor=] retaliating, for instance by artificially
 unrelated feature, by decreasing the quality of the service, or by trying to cajole, badger, or
 trick the [=person=] into opting back into the [=processing=].
 
+Note that because data is valuable, some sites allow users to pay for use of the site with data. If
+a user of this sort of site doesn't [=consent=] to exchange their data for use of the site, it's not
+retaliation to prevent them from using the site.
+
 ## Support Choosing Which Information to Present {#support-choosing-info}
 
 <div class="practice" data-audiences="user-agents">
