--- a/index.html
+++ b/index.html
@@ -1254,7 +1254,8 @@ the data exposed, is to autogenerate a new email address for each context.
 ### Ancillary uses
 
 [=Sites=] sometimes use data in ways that aren't needed for the user's immediate
-goals. For example, they might bill advertisers, measure site performance, or
+goals. For example, they might help users pay for things, bill advertisers,
+measure site performance, or
 tell developers about bugs. These uses are known as <dfn data-lt="ancillary
 use">ancillary uses</dfn>.
 
