--- a/index.html
+++ b/index.html
@@ -1290,17 +1290,17 @@ the data exposed, is to autogenerate a new email address for each context.
 
 </aside>
 
-### Ancillary uses
+### Supporting uses
 
 [=Sites=] sometimes use data in ways that aren't needed for the user's immediate
 goals. For example, they might bill advertisers, measure site performance, or
-tell developers about bugs. These uses are known as <dfn data-lt="ancillary
-use">ancillary uses</dfn>.
+tell developers about bugs. These uses are known as <dfn data-lt="supporting
+use">supporting uses</dfn>.
 
-[=Sites=] can get the data they want for [=ancillary uses=] from a variety of places:
+[=Sites=] can get the data they want for [=supporting uses=] from a variety of places:
 
 <dl>
-  <dt><dfn>Non-ancillary APIs</dfn></dt>
+  <dt><dfn>Essential APIs</dfn></dt>
   <dd>
     Web APIs that were designed to support users' immediate goals, like <a
     data-cite="DOM#interface-event">DOM events</a> and <a
@@ -1308,19 +1308,19 @@ use">ancillary uses</dfn>.
     observers</a>.
   </dd>
 
-  <dt><dfn>Ancillary APIs computed from existing information</dfn></dt>
+  <dt><dfn>Supporting APIs computed from existing information</dfn></dt>
   <dd>
     APIs that filter, summarize, or time-shift information available from
-    [=non-ancillary APIs=], like the [[[Event-Timing]]] and <a
-    data-cite="Intersection-Observer#introduction">IntersectionObserver</a>. See
-    [[[#information]]] for restrictions on how existing non-ancillary APIs can
-    be used to justify new ancillary APIs.
+    [=essential APIs=], like the [[[Event-Timing]]] and <a
+    data-cite="intersection-observer#introduction">IntersectionObserver</a>. See
+    [[[#information]]] for restrictions on how existing essential APIs can
+    be used to justify new supporting APIs.
   </dd>
 
-  <dt><dfn>Ancillary APIs that provide new information</dfn></dt>
+  <dt><dfn>Supporting APIs that provide new information</dfn></dt>
   <dd>
     APIs that provide new information that's primarily useful to support the
-    ancillary uses, like <a data-cite="Element-Timing#sec-intro">element paint
+    supporting uses, like <a data-cite="Element-Timing#sec-intro">element paint
     timing</a>, <a data-cite="Performance-Measure-Memory#intro">memory usage
     measurements</a>, and <a
     data-cite="Deprecation-Reporting#deprecation-report">deprecation
@@ -1337,10 +1337,10 @@ across contexts</a>. In order to uphold the principle of [[[#data-minimization]]
 use of this data.
 
 The task force does not have consensus about how [=user agents=] should handle
-[=ancillary APIs computed from existing information=].
+[=supporting APIs computed from existing information=].
 Advocates of these APIs argue that they're hard to use to
 extract [=personal data=], they're more efficient than collecting the same
-information though [=non-ancillary APIs=], sites are less likely to adopt these
+information though [=essential APIs=], sites are less likely to adopt these
 APIs if a significant number of people turn them off, and that the act of
 turning them off can contribute to [=browser fingerprinting=].
 Opponents argue that if data's easier or cheaper to collect, more sites will
@@ -1351,24 +1351,24 @@ functionality.
 Because different users are likely to have different preferences:
 
 <div class="practice" data-audiences="api-designers">
-<span class="practicelab" id="principle-identify-ancillary-apis">Specifications
-for [=ancillary APIs computed from existing information=] and [=ancillary APIs
+<span class="practicelab" id="principle-identify-supporting-apis">Specifications
+for [=supporting APIs computed from existing information=] and [=supporting APIs
 that provide new information=] should identify them as such, so that [=user
 agents=] can provide appropriate choices for their users.</span>
 </div>
 
-#### Designing ancillary APIs that provide new information {#designing-ancillary-apis-with-new-information}
+#### Designing supporting APIs that provide new information {#designing-supporting-apis-with-new-information}
 
 <div class="practice" data-audiences="api-designers">
 <span class="practicelab"
-id="principle-ancillary-apis-with-new-information-shouldnt-reveal-personal-data">
-[=Ancillary APIs that provide new information=] should not reveal any [=personal
+id="principle-supporting-apis-with-new-information-shouldnt-reveal-personal-data">
+[=Supporting APIs that provide new information=] should not reveal any [=personal
 data=] that isn't already available through other APIs, without an indication
 that doing so aligns with the user's wishes and interests.
 </span>
 </div>
 
-Most [=ancillary uses=] don't require that a site learn any [=personal data=].
+Most [=supporting uses=] don't require that a site learn any [=personal data=].
 For example, site performance measurements and ad billing involve averaging or
 summing data across many users such that any individual's contribution is
 obscured. Private aggregation techniques can often allow an API to serve its use
@@ -1386,7 +1386,7 @@ involved from being identifiable.
   Group">PATCG</abbr></a> groups.
 </aside>
 
-Some [=ancillary uses=] don't require their data to be related to a person, but
+Some [=supporting uses=] don't require their data to be related to a person, but
 the useful aggregations across many people are difficult to design into a web
 API, or they might require new technologies to be invented. Some ways API
 designers can handle this situation include:
@@ -1408,15 +1408,15 @@ If an API had to make one of these choices, and then something else about the
 API needs to change, designers should consider replacing the whole API with one
 that avoids exposing [=personal data=].
 
-Some other [=ancillary uses=] do require that a person be connected to their
+Some other [=supporting uses=] do require that a person be connected to their
 data. For example, a person might want to file a bug report that a website
 breaks on their particular computer, and be able to get follow-up communication
 from the developers while they fix the bug. This is an appropriate time to ask
 the person's permission.
 
 <div class="practice" data-audiences="user-agents">
-<span class="practicelab" id="principle-disabling-ancillary-apis-with-new-information">
-User agents should provide a way to enable or disable [=ancillary APIs that
+<span class="practicelab" id="principle-disabling-supporting-apis-with-new-information">
+User agents should provide a way to enable or disable [=supporting APIs that
 provide new information=] and should set the default according to their users'
 needs.
 </span>
@@ -1424,7 +1424,7 @@ needs.
 
 Some people might know something about their
 specific situation that makes the API designers' general decisions inappropriate
-for them. Because the information provided by [=ancillary APIs that provide new
+for them. Because the information provided by [=supporting APIs that provide new
 information=] isn't
 available in any other way, [=user agents=] should let people turn them off,
 despite the additional risk of [=browser fingerprinting=].
