Mention tradeoffs inherent in building designed-for-purpose APIs.

--- a/index.html
+++ b/index.html
@@ -1856,7 +1856,9 @@ Examples of mitigations include:
 
 Features that are designed-for-purpose facilitate these principles by providing functionality that is only or primarily
 useful for a particular purpose. Designed-for-purpose features make it easier to explain the purpose to people, and may
-also limit the feasible secondary uses of data.
+also limit the feasible secondary uses of data. When building a designed-for-purpose feature,
+<a data-cite="design-principles#high-level-low-level">consider tradeoffs between high and low-level
+APIs</a>.
 
 [=Controlled de-identified data=] may be used for additional purposes in ways that are compatible with the specified
 purpose.
