Say users can say whether pieces of information are sensitive.

--- a/index.html
+++ b/index.html
@@ -1515,7 +1515,10 @@ For example:
 * [Whether they are using assistive technology.](https://w3ctag.github.io/design-principles/#do-not-expose-use-of-assistive-tech)
 
 A particular piece of information may have different sensitivity for different
-people. People can become vulnerable if sensitive information about them is,
+people. This implies that individual people should be able to adjust whether each
+piece of information about them should be treated as sensitive.
+
+People can become vulnerable if sensitive information about them is,
 or is likely to be, exposed; see [[[#vulnerability]]].
 
 <aside class="example">
